--- a/index.qmd
+++ b/index.qmd
@@ -31,6 +31,13 @@ library(here)
 
 ::: {.fragment .fade-up}
 ::: {.fragment .semi-fade-out}
+¿Cómo reflejamos nuestras comunidades en nuestras formas de hablar?
+:::
+:::
+
+
+::: {.fragment .fade-up}
+::: {.fragment .semi-fade-out}
 Hablantes de herencia
 :::
 :::
@@ -168,6 +175,30 @@ Las actitudes pueden ser [positivas]{.emph} o [negativas]{.emph}
 <center>
 Las [creencias]{.emph} sobre la lengua típicamente reflejan creencias [sobre personas]{.emph}, no lenguaje.
 </center>
+
+# Nuestras comunidades y formas de hablar
+
+## ¿A qué comunidades pertenecemos?
+
+p. ej.:
+
+- nacionalidad
+- religión
+- una clase de lengua
+- trabajador
+- sexualidad
+- género
+- ...?
+
+## ¿A qué comunidades pertenecemos?
+
+¿Hablas de un cierto modo por ser parte de una comunidad?
+
+P. ej.:
+- los méxicanos pueden [pronunciar]{.emph} 'tl' como en la palabra 'tlacote', mientras que otras variedades tienen dificuldades a pronunciarla
+- trabajas en una fábrica y conoces muchas [palabras especializadas]{.emph}
+- los españoles parecen [maleducados]{.emph}
+  - ¿por qué será?
 
 # Hablantes de herencia {.transition}
 
